--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
+    "debug": "^2.2.0",
     "html-loader": "^0.4.3",
+    "jquery": "^2.2.3",
     "node-sass": "^3.7.0",
     "sass": "^0.5.0",
     "sass-loader": "^3.2.0",
