--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "node-sass": "^3.7.0",
     "sass": "^0.5.0",
     "sass-loader": "^3.2.0",
+    "svg-url-loader": "^1.0.3",
     "vue": "^1.0.22",
     "vue-router": "^0.7.13",
+    "vue-strap": "^1.0.11",
+    "vuex": "^0.6.3",
     "webpack": "^1.13.0",
     "zepto": "^1.0.1"
   }
